bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: value and is not a member of Boolean
  if (weekday==false and vacation==false) return true
                     ^